--- a/notebooks/02_metadata_layer.ipynb
+++ b/notebooks/02_metadata_layer.ipynb
@@ -13,10 +13,9 @@
     }
    },
    "source": [
-    "# <notebook name>\n",
-    "Purpose: short description\n",
-    "Author: Janak\n",
-    "Date: YYYY-MM-DD\n"
+    "# 02_metadata_layer\n",
+    "Purpose: Load metadata, validate Bronze tables, apply rules, generate a quality report.\n",
+    "Author: Janak  \n"
    ]
   },
   {
@@ -27,13 +26,284 @@
      "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "2d43b400-fa14-498f-a62b-afb7e4e5ebd2",
-     "showTitle": false,
+     "showTitle": true,
      "tableResultSettingsMap": {},
-     "title": ""
+     "title": "Imports & Setup"
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "from pyspark.sql import SparkSession\n",
+    "from pyspark.sql.functions import *\n",
+    "from delta import *\n",
+    "import json\n",
+    "import os\n",
+    "\n",
+    "spark = SparkSession.builder.getOrCreate()\n",
+    "\n",
+    "bronze_base = \"/tmp/delta/bronze\"\n",
+    "metadata_path = \"src/metadata/metadata_schema.json\"\n",
+    "\n",
+    "print(\"Spark initialized, Bronze path:\", bronze_base)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "a1dc4bd8-07f2-455a-8c1f-9601123e1afd",
+     "showTitle": true,
+     "tableResultSettingsMap": {},
+     "title": "Load Metadata JSON"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Load metadata JSON\n",
+    "with open(metadata_path, \"r\") as f:\n",
+    "    metadata = json.load(f)\n",
+    "\n",
+    "metadata\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "f7a29c41-e36e-440f-8aaf-fcb76512ab8b",
+     "showTitle": true,
+     "tableResultSettingsMap": {},
+     "title": "Display Metadata Summary"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Show high-level metadata for all tables\n",
+    "for table, details in metadata.items():\n",
+    "    print(f\"Table: {table}\")\n",
+    "    print(\"  Columns:\", list(details['schema'].keys()))\n",
+    "    print(\"  Owner:\", details.get(\"owner\"))\n",
+    "    print(\"  Freshness Hours:\", details.get(\"freshness_hours\"))\n",
+    "    print(\"  Quality Rules:\", list(details.get(\"quality_rules\", {}).keys()))\n",
+    "    print(\"-\" * 50)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "140d8e3e-e57c-4dcb-b3d5-42b63aec85ec",
+     "showTitle": true,
+     "tableResultSettingsMap": {},
+     "title": "Load All Bronze Tables"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "bronze_dfs = {}\n",
+    "\n",
+    "for table in metadata.keys():\n",
+    "    delta_path = f\"{bronze_base}/{table}\"\n",
+    "    print(f\"Loading Bronze table: {table} from {delta_path}\")\n",
+    "    df = spark.read.format(\"delta\").load(delta_path)\n",
+    "    bronze_dfs[table] = df\n",
+    "    display(df.limit(5))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "dc73698e-4253-4f62-a7c6-c7c8a461a9f9",
+     "showTitle": true,
+     "tableResultSettingsMap": {},
+     "title": "Define Validation Functions (Rules Engine)"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def validate_not_null(df, cols):\n",
+    "    results = {}\n",
+    "    for c in cols:\n",
+    "        null_count = df.filter(df[c].isNull()).count()\n",
+    "        results[c] = null_count\n",
+    "    return results\n",
+    "\n",
+    "def validate_positive(df, cols):\n",
+    "    results = {}\n",
+    "    for c in cols:\n",
+    "        neg_count = df.filter(col(c) < 0).count()\n",
+    "        results[c] = neg_count\n",
+    "    return results\n",
+    "\n",
+    "def validate_enum(df, enum_dict):\n",
+    "    results = {}\n",
+    "    for col_name, accepted_values in enum_dict.items():\n",
+    "        invalid_count = df.filter(~col(col_name).isin(accepted_values)).count()\n",
+    "        results[col_name] = invalid_count\n",
+    "    return results\n",
+    "\n",
+    "def cast_schema(df, schema_dict):\n",
+    "    for col_name, dtype in schema_dict.items():\n",
+    "        df = df.withColumn(col_name, col(col_name).cast(dtype))\n",
+    "    return df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "f7334f9f-58a8-4134-a266-4dada4005218",
+     "showTitle": true,
+     "tableResultSettingsMap": {},
+     "title": "Apply Metadata Rules to Each Table"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "validation_results = {}\n",
+    "\n",
+    "for table, meta in metadata.items():\n",
+    "    print(f\"Validating table: {table}\")\n",
+    "    df = bronze_dfs[table]\n",
+    "\n",
+    "    # Schema Enforcement\n",
+    "    expected_schema = meta[\"schema\"]\n",
+    "    df_casted = cast_schema(df, expected_schema)\n",
+    "\n",
+    "    # Apply Rules\n",
+    "    rules = meta.get(\"quality_rules\", {})\n",
+    "    table_results = {}\n",
+    "\n",
+    "    if \"not_null\" in rules:\n",
+    "        table_results[\"not_null\"] = validate_not_null(df_casted, rules[\"not_null\"])\n",
+    "\n",
+    "    if \"positive_values\" in rules:\n",
+    "        table_results[\"positive_values\"] = validate_positive(df_casted, rules[\"positive_values\"])\n",
+    "\n",
+    "    if \"accepted_values\" in rules:\n",
+    "        table_results[\"accepted_values\"] = validate_enum(df_casted, rules[\"accepted_values\"])\n",
+    "\n",
+    "    validation_results[table] = table_results\n",
+    "    print(\"Validation:\", table_results)\n",
+    "    print(\"-\" * 80)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "2105fad2-6666-4e60-8cf4-e02d9493b946",
+     "showTitle": true,
+     "tableResultSettingsMap": {},
+     "title": "Convert Validation Results to a Spark DataFrame"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Normalize results (convert nested dicts to rows)\n",
+    "rows = []\n",
+    "\n",
+    "for table, checks in validation_results.items():\n",
+    "    for rule_type, result_dict in checks.items():\n",
+    "        for col_name, issue_count in result_dict.items():\n",
+    "            rows.append((table, rule_type, col_name, issue_count))\n",
+    "\n",
+    "validation_df = spark.createDataFrame(\n",
+    "    rows,\n",
+    "    [\"table_name\", \"rule_type\", \"column_name\", \"issue_count\"]\n",
+    ")\n",
+    "\n",
+    "display(validation_df)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "3966fa29-5539-467f-ba4d-df751a6bc293",
+     "showTitle": true,
+     "tableResultSettingsMap": {},
+     "title": "Save Validation Report to Delta (Optional but Recommended)"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "quality_report_path = \"/tmp/delta/quality_report\"\n",
+    "\n",
+    "validation_df.write.format(\"delta\").mode(\"overwrite\").save(quality_report_path)\n",
+    "print(\"Saved quality report to:\", quality_report_path)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "c3511ac1-8203-4ce2-9f82-670298573ac5",
+     "showTitle": true,
+     "tableResultSettingsMap": {},
+     "title": "Summary Dashboard (Quick Insights)"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "print(\"🔥 QUALITY REPORT SUMMARY 🔥\")\n",
+    "summary = (\n",
+    "    validation_df.groupBy(\"table_name\", \"rule_type\")\n",
+    "    .agg(sum(\"issue_count\").alias(\"total_issues\"))\n",
+    "    .orderBy(desc(\"total_issues\"))\n",
+    ")\n",
+    "\n",
+    "display(summary)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "5ed9aae9-5caa-4232-87cc-6fb3a403be27",
+     "showTitle": true,
+     "tableResultSettingsMap": {},
+     "title": "Register as Table for SQL Exploration"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "validation_df.createOrReplaceTempView(\"quality_report_view\")\n",
+    "\n",
+    "spark.sql(\"\"\"\n",
+    "SELECT table_name, rule_type, column_name, issue_count\n",
+    "FROM quality_report_view\n",
+    "ORDER BY issue_count DESC\n",
+    "\"\"\").show()\n"
+   ]
   }
  ],
  "metadata": {
