--- a/notebooks/04_gold_transform.ipynb
+++ b/notebooks/04_gold_transform.ipynb
@@ -13,10 +13,13 @@
     }
    },
    "source": [
-    "# <notebook name>\n",
-    "Purpose: short description\n",
+    "# 04_gold_transform\n",
+    "Purpose: Build Gold business layer tables using cleaned Silver data.\n",
+    "- Daily revenue / order KPIs\n",
+    "- Product-level sales metrics\n",
+    "- Customer-level summaries\n",
     "Author: Janak\n",
-    "Date: YYYY-MM-DD\n"
+    "Date: 2025-11-26"
    ]
   },
   {
@@ -27,13 +30,491 @@
      "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "31481747-95f1-48a4-b14a-370772d8d549",
+     "showTitle": true,
+     "tableResultSettingsMap": {},
+     "title": "Imports & Paths"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from pyspark.sql import SparkSession\n",
+    "from pyspark.sql.functions import *\n",
+    "from delta import *\n",
+    "import datetime\n",
+    "\n",
+    "spark = SparkSession.builder.getOrCreate()\n",
+    "\n",
+    "silver_base = \"/tmp/delta/silver\"\n",
+    "gold_base = \"/tmp/delta/gold\"\n",
+    "\n",
+    "print(\"Silver base:\", silver_base)\n",
+    "print(\"Gold base:\", gold_base)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "c6c345c8-6b85-4af4-bbc4-0c62e89e850c",
+     "showTitle": true,
+     "tableResultSettingsMap": {},
+     "title": "Load All Silver Tables"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "silver_tables = [\"orders\", \"customers\", \"products\", \"payments\", \"inventory\"]\n",
+    "silver_dfs = {}\n",
+    "\n",
+    "for table in silver_tables:\n",
+    "    try:\n",
+    "        path = f\"{silver_base}/{table}\"\n",
+    "        df = spark.read.format(\"delta\").load(path)\n",
+    "        silver_dfs[table] = df\n",
+    "        print(f\"Loaded {table}, rows={df.count()}, cols={len(df.columns)}\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"Skipping {table}: {e}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "40eed534-f1c4-4f50-a945-d556553d7558",
+     "showTitle": true,
+     "tableResultSettingsMap": {},
+     "title": "Create Temp Views for SQL"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "for name, df in silver_dfs.items():\n",
+    "    df.createOrReplaceTempView(f\"{name}_silver\")\n",
+    "    print(\"Created view:\", f\"{name}_silver\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "01b77bc0-4696-4097-9af8-967ca6c58366",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "\n",
+    "🥇 GOLD LAYER TABLES START HERE\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "64742182-734d-41b8-a4c5-9337c558303e",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "GOLD Table 1: Daily Revenue (orders + payments)\n",
+    "Goal:\n",
+    "\n",
+    "Show total revenue per day\n",
+    "\n",
+    "Include # orders\n",
+    "\n",
+    "Include # successful payments"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "84473405-c25b-4451-bafa-43c87d25943a",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "daily_revenue = spark.sql(\"\"\"\n",
+    "    SELECT\n",
+    "        to_date(o.order_date) AS order_date,\n",
+    "        COUNT(DISTINCT o.order_id) AS total_orders,\n",
+    "        SUM(o.amount) AS total_order_amount,\n",
+    "        SUM(CASE WHEN p.status = 'confirmed' THEN p.amount ELSE 0 END) AS total_confirmed_payments\n",
+    "    FROM orders_silver o\n",
+    "    LEFT JOIN payments_silver p\n",
+    "        ON o.order_id = p.order_id\n",
+    "    GROUP BY to_date(o.order_date)\n",
+    "    ORDER BY order_date\n",
+    "\"\"\")\n",
+    "\n",
+    "display(daily_revenue)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "e09aceef-4488-4759-a63e-1a61fc4d2987",
+     "showTitle": true,
+     "tableResultSettingsMap": {},
+     "title": "Write Daily Revenue to Gold Layer"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "gold_path = f\"{gold_base}/daily_revenue\"\n",
+    "daily_revenue.write.format(\"delta\").mode(\"overwrite\").partitionBy(\"order_date\").save(gold_path)\n",
+    "print(\"✔ Gold table written:\", gold_path)\n",
+    "\n",
+    "daily_revenue.createOrReplaceTempView(\"daily_revenue_gold\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "413cfecd-4c29-418d-a8be-941ab3826de7",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "GOLD Table 2: Product Sales Summary\n",
+    "Goal:\n",
+    "\n",
+    "Revenue per product\n",
+    "\n",
+    "Quantity sold\n",
+    "\n",
+    "Category performance\n",
+    "\n",
+    "We compute quantity sold as:\n",
+    "If order exists → count 1 piece per order for simplicity\n",
+    "(You can replace later with real order_items table.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "f148cef2-6569-4f10-91a5-31b43078b735",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "product_sales = spark.sql(\"\"\"\n",
+    "    SELECT\n",
+    "        p.product_id,\n",
+    "        p.product_name,\n",
+    "        p.category,\n",
+    "        COUNT(o.order_id) AS total_units_sold,\n",
+    "        SUM(o.amount) AS total_revenue\n",
+    "    FROM products_silver p\n",
+    "    LEFT JOIN orders_silver o\n",
+    "        ON p.product_id = substring(o.order_id, 2, 3) -- TEMP LOGIC for demo (update with real key later)\n",
+    "    GROUP BY p.product_id, p.product_name, p.category\n",
+    "    ORDER BY total_revenue DESC\n",
+    "\"\"\")\n",
+    "\n",
+    "display(product_sales)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "a0aba483-6b63-4f68-a819-9c2a982cb438",
+     "showTitle": true,
+     "tableResultSettingsMap": {},
+     "title": "Write Product Sales Summary to Gold"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "gold_path = f\"{gold_base}/product_sales\"\n",
+    "product_sales.write.format(\"delta\").mode(\"overwrite\").save(gold_path)\n",
+    "print(\"✔ Gold table written:\", gold_path)\n",
+    "\n",
+    "product_sales.createOrReplaceTempView(\"product_sales_gold\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "9e4b2ed6-f870-47f9-a0b6-3b53850fd1c7",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "GOLD Table 3: Customer Lifetime Value (CLV)\n",
+    "Goal:\n",
+    "\n",
+    "Total spend per customer\n",
+    "\n",
+    "Number of orders\n",
+    "\n",
+    "Average order value\n",
+    "\n",
+    "Loyalty tier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "0a872fe7-5790-442f-acee-f3f4f1e2a97f",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "customer_ltv = spark.sql(\"\"\"\n",
+    "    SELECT\n",
+    "        c.customer_id,\n",
+    "        c.first_name,\n",
+    "        c.last_name,\n",
+    "        c.loyalty_tier,\n",
+    "        COUNT(o.order_id) AS total_orders,\n",
+    "        SUM(o.amount) AS total_spent,\n",
+    "        AVG(o.amount) AS avg_order_value,\n",
+    "        MIN(o.order_date) AS first_order_date,\n",
+    "        MAX(o.order_date) AS last_order_date\n",
+    "    FROM customers_silver c\n",
+    "    LEFT JOIN orders_silver o\n",
+    "        ON c.customer_id = o.customer_id\n",
+    "    GROUP BY \n",
+    "        c.customer_id, c.first_name, c.last_name, c.loyalty_tier\n",
+    "    ORDER BY total_spent DESC\n",
+    "\"\"\")\n",
+    "\n",
+    "display(customer_ltv)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "acc0a2b8-9260-41ad-aaff-4c0aed1a3ea5",
+     "showTitle": true,
+     "tableResultSettingsMap": {},
+     "title": "Write Customer LTV Table to Gold"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "gold_path = f\"{gold_base}/customer_ltv\"\n",
+    "customer_ltv.write.format(\"delta\").mode(\"overwrite\").save(gold_path)\n",
+    "print(\"✔ Gold table written:\", gold_path)\n",
+    "\n",
+    "customer_ltv.createOrReplaceTempView(\"customer_ltv_gold\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "d7a270f0-f135-43a3-88a2-b67cc9853d07",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "GOLD Table 4: Payment Insights\n",
+    "Goal:\n",
+    "\n",
+    "Payment success rate\n",
+    "\n",
+    "Refund rate\n",
+    "\n",
+    "Payment method usage"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "3252c002-9eb2-488d-a690-ec017f595713",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "payment_summary = spark.sql(\"\"\"\n",
+    "    SELECT\n",
+    "        payment_method,\n",
+    "        COUNT(payment_id) AS total_payments,\n",
+    "        SUM(CASE WHEN status='confirmed' THEN 1 ELSE 0 END) AS confirmed_count,\n",
+    "        SUM(CASE WHEN status='refunded' THEN 1 ELSE 0 END) AS refunded_count,\n",
+    "        SUM(CASE WHEN status='pending' THEN 1 ELSE 0 END) AS pending_count,\n",
+    "        SUM(amount) AS total_amount\n",
+    "    FROM payments_silver\n",
+    "    GROUP BY payment_method\n",
+    "    ORDER BY total_amount DESC\n",
+    "\"\"\")\n",
+    "\n",
+    "display(payment_summary)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "86b64c83-881e-4db0-b337-136ec8045be7",
+     "showTitle": true,
+     "tableResultSettingsMap": {},
+     "title": "Write Payment Summary to Gold"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "gold_path = f\"{gold_base}/payment_summary\"\n",
+    "payment_summary.write.format(\"delta\").mode(\"overwrite\").save(gold_path)\n",
+    "print(\"✔ Gold table written:\", gold_path)\n",
+    "\n",
+    "payment_summary.createOrReplaceTempView(\"payment_summary_gold\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "0689e585-38bf-4779-83bb-ba56969b9898",
+     "showTitle": true,
+     "tableResultSettingsMap": {},
+     "title": "GOLD Dashboard (Aggregated KPIs)"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "kpi = spark.sql(\"\"\"\n",
+    "SELECT\n",
+    "    (SELECT SUM(total_order_amount) FROM daily_revenue_gold) AS total_revenue,\n",
+    "    (SELECT SUM(total_orders) FROM daily_revenue_gold) AS total_orders,\n",
+    "    (SELECT COUNT(*) FROM customer_ltv_gold) AS total_customers,\n",
+    "    (SELECT COUNT(*) FROM product_sales_gold) AS total_products\n",
+    "\"\"\")\n",
+    "\n",
+    "display(kpi)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "52e534f5-1c37-487b-b8b0-4fbd79cd6dd5",
+     "showTitle": true,
+     "tableResultSettingsMap": {},
+     "title": "Verify Gold Tables Exist"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "for table in [\"daily_revenue\", \"product_sales\", \"customer_ltv\", \"payment_summary\"]:\n",
+    "    path = f\"{gold_base}/{table}\"\n",
+    "    try:\n",
+    "        df = spark.read.format(\"delta\").load(path)\n",
+    "        print(f\"✔ Gold table: {table}, Rows = {df.count()}\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"❌ Missing Gold table: {table} — {e}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "d9135dd9-8931-4f6c-be5a-9bad9d2e335a",
+     "showTitle": true,
+     "tableResultSettingsMap": {},
+     "title": "Save Manifest (Optional)"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "manifest = {\n",
+    "    \"run_time\": datetime.datetime.now().isoformat(),\n",
+    "    \"gold_tables\": [\n",
+    "        {\"name\": \"daily_revenue\"},\n",
+    "        {\"name\": \"product_sales\"},\n",
+    "        {\"name\": \"customer_ltv\"},\n",
+    "        {\"name\": \"payment_summary\"},\n",
+    "    ]\n",
+    "}\n",
+    "\n",
+    "manifest_path = \"/dbfs/tmp/gold_manifest.json\"\n",
+    "import json\n",
+    "with open(manifest_path, \"w\") as f:\n",
+    "    json.dump(manifest, f, indent=2)\n",
+    "\n",
+    "print(\"Gold manifest saved to:\", manifest_path)\n"
+   ]
   }
  ],
  "metadata": {
