--- a/notebooks/05_llm_agent_tests.ipynb
+++ b/notebooks/05_llm_agent_tests.ipynb
@@ -13,10 +13,10 @@
     }
    },
    "source": [
-    "# <notebook name>\n",
-    "Purpose: short description\n",
-    "Author: Janak\n",
-    "Date: YYYY-MM-DD\n"
+    "# 05_llm_agent_tests\n",
+    "Purpose: Test metadata Q&A agent and Spark optimization agent.  \n",
+    "Author: Janak  \n",
+    "Date: 2025-11-26"
    ]
   },
   {
@@ -27,13 +27,426 @@
      "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "b0d3e621-9011-48e0-8b33-2f2b05b6b8f1",
-     "showTitle": false,
+     "showTitle": true,
      "tableResultSettingsMap": {},
-     "title": ""
+     "title": "Imports & Setup"
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "from pyspark.sql import SparkSession\n",
+    "from pyspark.sql.functions import col\n",
+    "import json, os, io, sys, textwrap\n",
+    "from typing import Dict, Any, List\n",
+    "\n",
+    "spark = SparkSession.builder.getOrCreate()\n",
+    "\n",
+    "# Paths (adjust if you changed them)\n",
+    "metadata_path = \"src/metadata/metadata_schema.json\"\n",
+    "silver_base = \"/tmp/delta/silver\"\n",
+    "gold_base = \"/tmp/delta/gold\"\n",
+    "\n",
+    "# Load metadata (dict)\n",
+    "with open(metadata_path, \"r\") as f:\n",
+    "    metadata = json.load(f)\n",
+    "\n",
+    "print(\"Loaded metadata tables:\", list(metadata.keys()))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "abb7155f-9eab-4d24-9d16-7a624d04e2d2",
+     "showTitle": true,
+     "tableResultSettingsMap": {},
+     "title": "Utility: Pretty Print helper"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def pretty_print(obj):\n",
+    "    import pprint\n",
+    "    pp = pprint.PrettyPrinter(indent=2, compact=False)\n",
+    "    pp.pprint(obj)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "c3e5e5c9-90c0-43c0-8a9c-63bc3261dda4",
+     "showTitle": true,
+     "tableResultSettingsMap": {},
+     "title": "METADATA Q&A: Simple Retrieval Functions"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Basic deterministic Q&A helpers using metadata dict\n",
+    "\n",
+    "def get_table_schema(table_name: str):\n",
+    "    t = metadata.get(table_name)\n",
+    "    if not t:\n",
+    "        return f\"Table not found: {table_name}\"\n",
+    "    return t.get(\"schema\", {})\n",
+    "\n",
+    "def get_table_description(table_name: str):\n",
+    "    t = metadata.get(table_name)\n",
+    "    if not t:\n",
+    "        return f\"Table not found: {table_name}\"\n",
+    "    return t.get(\"description\", \"No description provided.\")\n",
+    "\n",
+    "def find_tables_by_owner(owner: str) -> List[str]:\n",
+    "    out = [t for t,v in metadata.items() if v.get(\"owner\",\"\").lower() == owner.lower()]\n",
+    "    return out\n",
+    "\n",
+    "def tables_with_freshness_less_than(hours: int) -> List[str]:\n",
+    "    return [t for t,v in metadata.items() if v.get(\"freshness_hours\") is not None and v.get(\"freshness_hours\") < hours]\n",
+    "\n",
+    "def get_quality_rules(table_name: str):\n",
+    "    t = metadata.get(table_name)\n",
+    "    if not t:\n",
+    "        return f\"Table not found: {table_name}\"\n",
+    "    return t.get(\"quality_rules\", {})\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "9e7c77e4-87c5-45dc-b552-ce3fd88f78ef",
+     "showTitle": true,
+     "tableResultSettingsMap": {},
+     "title": "Agent Wrapper: interpret plain text queries (very small rule-based parser)"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Very small rule-based natural language parser to map a few common user intents to functions above.\n",
+    "\n",
+    "def metadata_qna_agent(query: str) -> str:\n",
+    "    q = query.strip().lower()\n",
+    "    if q.startswith(\"show schema for\") or q.startswith(\"schema for\"):\n",
+    "        # format: \"show schema for orders\"\n",
+    "        parts = q.split()\n",
+    "        table = parts[-1]\n",
+    "        schema = get_table_schema(table)\n",
+    "        return json.dumps(schema, indent=2)\n",
+    "    if \"who owns\" in q or \"owner of\" in q:\n",
+    "        # \"who owns orders\" or \"owner of orders\"\n",
+    "        parts = q.split()\n",
+    "        table = parts[-1]\n",
+    "        owner = metadata.get(table, {}).get(\"owner\", \"Unknown\")\n",
+    "        return f\"Owner of `{table}`: {owner}\"\n",
+    "    if \"tables owned by\" in q:\n",
+    "        # \"tables owned by data-platform\"\n",
+    "        owner = q.split(\"tables owned by\")[-1].strip()\n",
+    "        return str(find_tables_by_owner(owner))\n",
+    "    if \"freshness less than\" in q:\n",
+    "        # \"which tables have freshness less than 48 hours\"\n",
+    "        import re\n",
+    "        m = re.search(r\"freshness less than (\\d+)\", q)\n",
+    "        if m:\n",
+    "            hours = int(m.group(1))\n",
+    "            return str(tables_with_freshness_less_than(hours))\n",
+    "    if \"quality rules for\" in q or \"quality rules of\" in q:\n",
+    "        parts = q.split()\n",
+    "        table = parts[-1]\n",
+    "        return json.dumps(get_quality_rules(table), indent=2)\n",
+    "    # fallback: search metadata descriptions & table names for keywords\n",
+    "    keywords = q.split()\n",
+    "    matched = []\n",
+    "    for tname, info in metadata.items():\n",
+    "        text_blob = \" \".join([\n",
+    "            tname,\n",
+    "            info.get(\"description\",\"\"),\n",
+    "            \" \".join(info.get(\"schema\", {}).keys())\n",
+    "        ]).lower()\n",
+    "        if any(k in text_blob for k in keywords):\n",
+    "            matched.append(tname)\n",
+    "    if matched:\n",
+    "        return f\"Possible related tables: {matched}\"\n",
+    "    return \"I do not understand the query. Try: 'show schema for orders', 'who owns orders', 'tables owned by data-platform', 'freshness less than 48', or 'quality rules for orders'.\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "1f4631af-8d8b-4d19-91c9-a2c94140d441",
+     "showTitle": true,
+     "tableResultSettingsMap": {},
+     "title": "Run Example Metadata Q&A Queries"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "examples = [\n",
+    "    \"Show schema for orders\",\n",
+    "    \"Who owns orders\",\n",
+    "    \"Tables owned by data-platform\",\n",
+    "    \"Which tables have freshness less than 72\",\n",
+    "    \"Quality rules for orders\",\n",
+    "    \"Show tables related to customer\"\n",
+    "]\n",
+    "\n",
+    "for q in examples:\n",
+    "    print(\"Q:\", q)\n",
+    "    print(\"A:\", metadata_qna_agent(q))\n",
+    "    print(\"-\" * 50)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "cef6a03b-6a93-4381-bb5b-4caee70fcab6",
+     "showTitle": true,
+     "tableResultSettingsMap": {},
+     "title": "OPTIONAL: Embeddings-based Retriever (Scaffold)"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# OPTIONAL: Use OpenAI embeddings to build a metadata index and answer fuzzy queries.\n",
+    "# This is a scaffold. To enable:\n",
+    "# 1) Store your OPENAI_API_KEY in Databricks Secrets and set env var: os.environ[\"OPENAI_API_KEY\"] = dbutils.secrets.get(scope, key)\n",
+    "# 2) Uncomment and run the code below.\n",
+    "#\n",
+    "# NOTE: Running embeddings is optional and may incur API cost.\n",
+    "#\n",
+    "# pip install openai tiktoken  (if not already installed in your environment)\n",
+    "\n",
+    "\"\"\"\n",
+    "import os\n",
+    "import openai\n",
+    "from sklearn.metrics.pairwise import cosine_similarity\n",
+    "import numpy as np\n",
+    "\n",
+    "# set your key, example using Databricks secrets (uncomment and edit)\n",
+    "# os.environ[\"OPENAI_API_KEY\"] = dbutils.secrets.get(\"your_scope\",\"openai_key\")\n",
+    "openai.api_key = os.environ.get(\"OPENAI_API_KEY\")\n",
+    "\n",
+    "# Build documents: one doc per table with description + schema text\n",
+    "docs = []\n",
+    "table_names = []\n",
+    "for t,info in metadata.items():\n",
+    "    text = info.get(\"description\",\"\") + \" \" + \" \".join([f\"{c}:{typ}\" for c,typ in info.get(\"schema\",{}).items()])\n",
+    "    docs.append(text)\n",
+    "    table_names.append(t)\n",
+    "\n",
+    "# get embeddings for docs\n",
+    "resp = openai.Embedding.create(input=docs, model=\"text-embedding-3-small\")\n",
+    "doc_embeddings = np.array([r['embedding'] for r in resp['data']])\n",
+    "\n",
+    "def embedding_query(q):\n",
+    "    q_emb = np.array(openai.Embedding.create(input=[q], model=\"text-embedding-3-small\")['data'][0]['embedding'])\n",
+    "    sims = cosine_similarity([q_emb], doc_embeddings)[0]\n",
+    "    idx = sims.argmax()\n",
+    "    return table_names[idx], float(sims[idx])\n",
+    "\n",
+    "# Example:\n",
+    "print(\"Embedding retrieve:\", embedding_query(\"Which table contains order status and amount?\"))\n",
+    "\"\"\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "c57799cf-331c-4200-b250-74f2b29e3ae8",
+     "showTitle": true,
+     "tableResultSettingsMap": {},
+     "title": "Spark Optimization Agent: helpers"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Helpers to capture DataFrame explain plan as text and analyze\n",
+    "def capture_explain(df):\n",
+    "    # capture the output of df.explain() into a string\n",
+    "    old_stdout = sys.stdout\n",
+    "    sys.stdout = io.StringIO()\n",
+    "    try:\n",
+    "        df.explain(extended=True)\n",
+    "        plan = sys.stdout.getvalue()\n",
+    "    finally:\n",
+    "        sys.stdout = old_stdout\n",
+    "    return plan\n",
+    "\n",
+    "def suggest_optimizations_from_plan(plan_text: str) -> List[str]:\n",
+    "    suggestions = []\n",
+    "    pt = plan_text.lower()\n",
+    "    # Rule: detect shuffle/exchange\n",
+    "    if \"exchange\" in pt or \"shuffle\" in pt:\n",
+    "        suggestions.append(\"Detected shuffle/exchange — consider repartitioning by join key or using a broadcast join for small dimension tables.\")\n",
+    "    # Rule: detect cartesian (bad)\n",
+    "    if \"cartesianproduct\" in pt or \"cartesian\" in pt:\n",
+    "        suggestions.append(\"Cartesian product detected — check join conditions to avoid cross join.\")\n",
+    "    # Rule: wide dependency or group-by on non-partitioned large column\n",
+    "    if \"aggregate\" in pt and \"groupby\" in pt or \"group\" in pt:\n",
+    "        suggestions.append(\"Aggregation exists — ensure proper partitioning (date) or use map-side combiners when possible.\")\n",
+    "    # Rule: lots of file scans mention might indicate small files\n",
+    "    if \"scan\" in pt and \"file\" in pt:\n",
+    "        suggestions.append(\"Check file sizes — many small files can degrade performance. Consider compaction (OPTIMIZE).\")\n",
+    "    if not suggestions:\n",
+    "        suggestions.append(\"No obvious issues detected from plan text. Consider reviewing shuffle/joins manually.\")\n",
+    "    return suggestions\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "34c5764c-53c0-4aff-acf6-2a571b98cc08",
+     "showTitle": true,
+     "tableResultSettingsMap": {},
+     "title": "Optimization Agent: Quick Analysis Function"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def optimization_agent_for_query(df):\n",
+    "    plan = capture_explain(df)\n",
+    "    print(\"------ PHYSICAL PLAN (truncated) ------\")\n",
+    "    print(plan[:4000])  # show start\n",
+    "    suggestions = suggest_optimizations_from_plan(plan)\n",
+    "    return suggestions\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "9268465a-4e84-48c0-acb6-2f66edbd1e09",
+     "showTitle": true,
+     "tableResultSettingsMap": {},
+     "title": "Test Optimization Agent on a Sample Query"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Build a sample join query using Silver tables (if they exist)\n",
+    "try:\n",
+    "    orders = spark.read.format(\"delta\").load(f\"{silver_base}/orders\")\n",
+    "    payments = spark.read.format(\"delta\").load(f\"{silver_base}/payments\")\n",
+    "    # a sample join that could cause shuffle\n",
+    "    df_test = orders.join(payments, on=\"order_id\", how=\"left\")\n",
+    "    print(\"Rows in joined df:\", df_test.count())\n",
+    "    suggestions = optimization_agent_for_query(df_test)\n",
+    "    print(\"\\nSuggestions:\")\n",
+    "    for s in suggestions:\n",
+    "        print(\"-\", s)\n",
+    "except Exception as e:\n",
+    "    print(\"Could not run optimization test (maybe silver tables missing):\", e)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "2430f0a2-a113-4f87-8a78-5afdde9dba1a",
+     "showTitle": true,
+     "tableResultSettingsMap": {},
+     "title": "Example: Ask Agent to Explain a Metadata Violation"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Find enum mismatches found earlier in quality report for orders (example)\n",
+    "# If you ran 02_metadata_layer and saved validation_df to /tmp/delta/quality_report, load it:\n",
+    "try:\n",
+    "    v = spark.read.format(\"delta\").load(\"/tmp/delta/quality_report\")\n",
+    "    orders_violations = v.filter((col(\"table_name\") == \"orders\") & (col(\"rule_type\") == \"accepted_values\"))\n",
+    "    display(orders_violations)\n",
+    "    count_violations = orders_violations.agg({\"issue_count\":\"sum\"}).collect()[0][0]\n",
+    "    print(\"Total enum violations for orders (accepted_values):\", count_violations)\n",
+    "    # Agent natural-language explanation (basic)\n",
+    "    if count_violations and count_violations > 0:\n",
+    "        print(\"\\nAgent explanation:\")\n",
+    "        print(\"The 'orders.status' column contains values not in the accepted list (pending, shipped, delivered, cancelled).\")\n",
+    "        print(\"Example invalid value(s) may include 'returned'. You can either add 'returned' to accepted_values or mark returns via a separate column and update rules accordingly.\")\n",
+    "except Exception as e:\n",
+    "    print(\"Quality report not found or error:\", e)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "09b207c0-5958-42c7-8e5f-d21459921155",
+     "showTitle": true,
+     "tableResultSettingsMap": {},
+     "title": "Save Agent Interaction Examples (Optional)"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "examples_interactions = [\n",
+    "    {\"query\":\"Show schema for orders\", \"answer\": metadata_qna_agent(\"Show schema for orders\")},\n",
+    "    {\"query\":\"Who owns orders\", \"answer\": metadata_qna_agent(\"Who owns orders\")},\n",
+    "    {\"query\":\"Which tables have freshness less than 72\", \"answer\": metadata_qna_agent(\"Which tables have freshness less than 72\")}\n",
+    "]\n",
+    "\n",
+    "out_path = \"/dbfs/tmp/agent_examples.json\"\n",
+    "with open(out_path, \"w\") as f:\n",
+    "    json.dump(examples_interactions, f, indent=2)\n",
+    "print(\"Saved examples to:\", out_path)\n",
+    "display(examples_interactions)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "8a5c7dee-ba3f-4ca6-a5bd-b9e662a701c8",
+     "showTitle": true,
+     "tableResultSettingsMap": {},
+     "title": "Markdown (Next Steps & How to Wire to FastAPI)"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Next steps\n",
+    "- To upgrade QnA: enable embeddings (OpenAI/Azure) and build vector store of metadata docs.\n",
+    "- To upgrade optimization: add rules from Spark history/metrics and use job metrics to estimate sizes.\n",
+    "- To expose agent: wire `metadata_qna_agent()` and `optimization_agent_for_query()` to FastAPI endpoints (src/api/fastapi_app.py).\n",
+    "- Optional: store agent logs and user queries in a Delta table for observability.\n"
+   ]
   }
  ],
  "metadata": {
