--- a/notebooks/05_llm_agent_tests.ipynb
+++ b/notebooks/05_llm_agent_tests.ipynb
@@ -427,20 +427,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 0,
+   "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
      "inputWidgets": {},
-     "nuid": "8a5c7dee-ba3f-4ca6-a5bd-b9e662a701c8",
-     "showTitle": true,
+     "nuid": "126787b3-677c-47f5-b2a2-51324d069376",
+     "showTitle": false,
      "tableResultSettingsMap": {},
-     "title": "Markdown (Next Steps & How to Wire to FastAPI)"
+     "title": ""
     }
    },
-   "outputs": [],
    "source": [
+    "Markdown (Next Steps & How to Wire to FastAPI)\n",
     "# Next steps\n",
     "- To upgrade QnA: enable embeddings (OpenAI/Azure) and build vector store of metadata docs.\n",
     "- To upgrade optimization: add rules from Spark history/metrics and use job metrics to estimate sizes.\n",
